--- a/estilos/style.css
+++ b/estilos/style.css
@@ -19,7 +19,7 @@ header{
     -webkit-backdrop-filter: blur(10px); /* Compatibilidade */
 }
 
-img{
+.touchbar{
     width: 40px;
 }
 nav, nav ul, nav li {
@@ -42,9 +42,54 @@ nav a{
 }
 
 
+main{
+    display: grid;
+    grid-template-columns: auto 90vw auto;
+    gap:20px;
+    margin-top: 20px
+}
+section#sobremim{
+    padding: 20px;
+    grid-column: 2;
+}
+
+section#sobremim img.foto-perfil{
+    width: 200px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 50%;
+    display: block;
+    margin: auto;
+}
+
+section#sobremim h1{
+    margin: 15px 0;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+div#social{
+    margin-top: 0.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    gap: 15px;
+}
+
+
+
+
+
+
 /*@media (prefers-color-scheme: dark) {
     body {
     background: #121212;
     color: white;
     }
 }*/
+
+@media (max-width: 768px){
+ 
+}
