--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,59 +1,83 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body{
+body {
     background-color: white;
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-header{
-    margin-top: 10px;
+header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(255, 255, 255, 0.3); /* Fundo semi-transparente */
-    backdrop-filter: blur(10px); 
-    -webkit-backdrop-filter: blur(10px); /* Compatibilidade */
+    background-color: #1D1C21;/*rgba(22, 22, 23, .8)*/
+    backdrop-filter: blur(10px);
+    color: white;
+    padding: 10px 20px;
+    
 }
 
-.touchbar{
+.logoportifolio{
+    
+}
+
+.botao {
+    display: none;
+    border: none;
+    background-color: inherit;
+    color: white;
+    margin: 0;
+    padding: 0;
+    
+}
+
+.touchbar {
     width: 40px;
 }
-nav, nav ul, nav li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+
+nav,
+nav ul,
+nav li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 
 }
 
-nav ul{
+nav ul {
     display: flex;
     font-size: 12px;
 }
-nav li{
+
+nav li {
     padding: 10px 14px 10px 14px;
 }
-nav a{ 
+
+nav a {
     text-decoration: none;
     color: inherit;
 }
 
 
-main{
-    display: grid;
+main {
+    /*display: grid;
     grid-template-columns: auto 90vw auto;
-    gap:20px;
-    margin-top: 20px
-}
-section#sobremim{
-    padding: 20px;
-    grid-column: 2;
+    gap: 20px;
+    margin-top: 20px*/
+    
 }
 
-section#sobremim img.foto-perfil{
+section#sobremim {
+    padding: 20px;
+    grid-column: 2;
+    background-color: black;
+    color: #f5f5f7;
+}
+
+section#sobremim img.foto-perfil {
     width: 200px;
     aspect-ratio: 1/1;
     object-fit: cover;
@@ -61,15 +85,24 @@ section#sobremim img.foto-perfil{
     border-radius: 50%;
     display: block;
     margin: auto;
+    
 }
 
-section#sobremim h1{
+section#sobremim h1 {
     margin: 15px 0;
     font-size: 1.5em;
     text-align: center;
 }
 
-div#social{
+p{
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    
+}
+
+div#social {
     margin-top: 0.5em;
     display: flex;
     justify-content: center;
@@ -78,6 +111,13 @@ div#social{
     gap: 15px;
 }
 
+i{
+    background-color: #0077ED;
+    color: white;
+    padding: 10px;
+
+    border-radius: 50%;
+}
 
 
 
@@ -90,6 +130,31 @@ div#social{
     }
 }*/
 
-/*@media (max-width: 768px){
- 
-}*/
+@media (max-width: 768px) {
+    .menu {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+    }
+
+    .botao {
+        display: list-item;
+    }
+
+    .navegacao {}
+
+    nav ul{
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background: white;
+        width: 100%;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-left: 38px;
+
+    }
+}
