--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,34 +4,46 @@
     margin: 0;
 }
 
+:root {
+    --fundo1: white;
+    --fundo2: black;
+    --fundo3: #F5F5F7;
+    --letra1: white;
+    --letra2: black;
+    --botao: #0077ED;
+
+}
+
 body {
-    background-color: white;
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+    background-color: var(--fundo1);
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
 }
 
 header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1D1C21;/*rgba(22, 22, 23, .8)*/
+    background-color: #1D1C21;
+    /*rgba(22, 22, 23, .8)*/
     backdrop-filter: blur(10px);
-    color: white;
+    color: var(--letra1);
     padding: 10px 20px;
-    
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
 }
 
-.logoportifolio{
-    
-}
+.logoportifolio {}
 
 .botao {
     display: none;
     border: none;
     background-color: inherit;
-    color: white;
+    color: var(--letra1);
     margin: 0;
     padding: 0;
-    
+
 }
 
 .touchbar {
@@ -62,19 +74,12 @@ nav a {
 }
 
 
-main {
-    /*display: grid;
-    grid-template-columns: auto 90vw auto;
-    gap: 20px;
-    margin-top: 20px*/
-    
-}
 
 section#sobremim {
     padding: 20px;
     grid-column: 2;
     background-color: black;
-    color: #f5f5f7;
+    color: var(--letra1);
 }
 
 section#sobremim img.foto-perfil {
@@ -85,21 +90,24 @@ section#sobremim img.foto-perfil {
     border-radius: 50%;
     display: block;
     margin: auto;
-    
+
 }
 
 section#sobremim h1 {
     margin: 15px 0;
-    font-size: 1.5em;
+    font-size: 32px;
+        line-height: 1.4;
+
     text-align: center;
 }
 
-p{
-    width: 75%;
+section#sobremimp {
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    
+    font-size: 19px;
+
 }
 
 div#social {
@@ -111,13 +119,66 @@ div#social {
     gap: 15px;
 }
 
-i{
-    background-color: #0077ED;
-    color: white;
+i {
+    background-color: var(--botao);
+    color: var(--letra1);
     padding: 10px;
-
     border-radius: 50%;
 }
+
+
+ 
+
+article#detalhes h1 {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 32px;
+    padding: 30px;
+    line-height: 1.4;
+}
+
+article.skills{
+   background-color: var(--fundo3);
+}
+
+section#skills-container {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+}
+
+section div.skills-bloco {
+    background-color: var(--fundo3);
+    border-radius: 50px;
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+article.formacao{
+    background: #79c5e8;
+background: linear-gradient(182deg,rgba(121, 197, 232, 1) 0%, rgba(241, 245, 248, 1) 100%);
+}
+
+/*section div.skills-bloco:hover{
+    cursor: pointer;
+    padding: 40px;
+    transition: padding 0.7s ease-in-out;
+
+}*/
+
+section div .imgskills {
+    height: 150px;
+    width: auto;
+}
+
+
+
+
 
 
 
@@ -145,7 +206,7 @@ i{
 
     .navegacao {}
 
-    nav ul{
+    nav ul {
         display: none;
         position: absolute;
         top: 60px;
@@ -156,5 +217,9 @@ i{
         justify-content: flex-start;
         margin-left: 38px;
 
+    }
+
+    section#skills-container{
+        grid-template-columns: 1fr; 
     }
 }
